--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ Assets/Editor/Vungle/VungleSDK/VungleSDK.framework/Versions/Current/VungleSDK
 rejected_assets/
 .idea/.idea.Siege Engineer/.idea/contentModel.xml
 .idea/.idea.Siege Engineer/.idea/workspace.xml
+Logs
